--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </header>
 
   <main class="content">
-    <section class="section section__difficult">
+    <section class="section">
       <h2 class="section__title">
         Почему сосредоточиться так сложно
       </h2>
@@ -96,7 +96,7 @@
       </div>
     </section>
 
-    <section class="section section__concentration">
+    <section class="section__concentration">
       <h2 class="section__title">
         Что снижает концентрацию внимания?
       </h2>
@@ -140,7 +140,7 @@
       </div>
     </section>
 
-    <section class="section section__recommendations">
+    <section class="section">
       <h2 class="section__title">
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
       </h2>
@@ -210,7 +210,7 @@
       </div>
     </section>
 
-    <section class="section section__gallery">
+    <section class="section__gallery">
       <h2 class="section__title-gallery title-decor">А можно в картинках?</h2>
       <div class="gallery">
         <img
